feat: SQL 함수/데이터타입 변환 규칙 대폭 확장
  - StringBasedFunctionConverter: 60개 이상의 새 함수 변환 규칙 추가
    - Oracle→MySQL: TO_CHAR, TO_DATE, ADD_MONTHS, MONTHS_BETWEEN, LISTAGG, TRUNC 등
    - Oracle→PostgreSQL: NVL2→CASE WHEN, 시퀀스 문법 변환, STRING_AGG 등
    - MySQL→PostgreSQL: DATEDIFF, DATE_ADD/SUB, YEAR/MONTH/DAY, IF→CASE WHEN 등
    - PostgreSQL→MySQL: ILIKE, EXTRACT, DATE_TRUNC, INTERVAL 구문, 타입캐스팅 제거 확장
    - MySQL/PostgreSQL→Oracle: LIMIT→FETCH FIRST, 시퀀스 문법, TRUE/FALSE→1/0

  - StringBasedDataTypeConverter: Oracle 전용 타입 변환 추가
    - NVARCHAR2, NCLOB, NCHAR
    - LONG, LONG RAW, RAW(n)
    - TIMESTAMP WITH TIME ZONE/LOCAL TIME ZONE
    - INTERVAL, BFILE, ROWID, UROWID, XMLTYPE

  - 테스트 코드 추가
    - ComprehensiveConversionTest.kt: 종합 변환 테스트 (100+ 케이스)
    - NewFeaturesConversionTest.kt: 새 기능 검증 테스트 (50+ 케이스)

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,20 +1,27 @@
 # Build stage
-FROM gradle:8.10.2-jdk21 AS builder
+FROM --platform=linux/amd64 eclipse-temurin:21-jdk AS builder
 
 WORKDIR /app
 
+# Install gradle
+RUN apt-get update && apt-get install -y wget unzip && \
+    wget -q https://services.gradle.org/distributions/gradle-8.5-bin.zip && \
+    unzip -q gradle-8.5-bin.zip && \
+    rm gradle-8.5-bin.zip
+
+ENV PATH="/app/gradle-8.5/bin:${PATH}"
+
 # Copy all build files
-COPY build.gradle.kts ./
-COPY gradlew gradlew.bat ./
+COPY build.gradle.kts settings.gradle* ./
 
 # Copy source code
 COPY src ./src
 
-# Build application (gradle will download dependencies automatically)
+# Build application
 RUN gradle bootJar --no-daemon
 
 # Runtime stage
-FROM openjdk:21-ea-slim
+FROM --platform=linux/amd64 eclipse-temurin:21-jre
 
 WORKDIR /app
 
