feat: Modernize 디자인 시스템 적용 및 Bean 충돌 수정
  ## Frontend
  - Modernize 템플릿 기반 디자인 시스템 적용
    - 색상 팔레트: Primary(#5D87FF), Success(#13DEB9), Warning(#FFAE1F) 등
    - Plus Jakarta Sans 폰트 적용
    - 카드 기반 레이아웃 및 그림자 효과
  - 컴포넌트 스타일 업데이트
    - ConverterHeader, DatabaseSelector, ConverterToolbar
    - EditorActionBar, ThemeToggle, SqlConverter
  - Tailwind 설정에 커스텀 색상/그림자/border-radius 추가
  - 버튼, 뱃지, 입력필드 등 공통 컴포넌트 클래스 추가

  ## Backend
  - SqlValidationService Bean 이름 충돌 수정
    - converter.validation.SqlValidationService → SqlConversionValidationService로 리네임
    - 명시적 Bean 이름 지정: @Service("sqlConversionValidationService")
  - Spring Boot mainClass 명시 (build.gradle.kts)

  ## Docker
  - Dockerfile 사용자 생성 로직 수정 (기존 GID/UID 충돌 방지)

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -31,15 +31,15 @@ ARG JAR_FILE_PATH=build/libs/*.jar
 # Copy jar from builder
 COPY --from=builder /app/${JAR_FILE_PATH} sql-converter.jar
 
-# 사용자 생성 및 디렉토리 준비
-RUN groupadd -g 1000 appuser && \
-    useradd -r -u 1000 -g appuser appuser && \
+# 사용자 생성 및 디렉토리 준비 (기존 그룹/사용자 확인)
+RUN (getent group 1000 || groupadd -g 1000 appuser) && \
+    (getent passwd 1000 || useradd -r -u 1000 -g 1000 appuser) && \
     chmod 644 sql-converter.jar && \
     mkdir -p /home/logs/sql-converter && \
-    chown -R appuser:appuser /home && \
-    chown -R appuser:appuser /app
+    chown -R 1000:1000 /home && \
+    chown -R 1000:1000 /app
 
-USER appuser
+USER 1000
 
 # JVM options for container environment
 ENV JAVA_OPTS="-XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0 -XX:InitialRAMPercentage=50.0 -XX:+UseG1GC"
